# kamus_3_bahasa_terjemahan_kalimat

./: CMakeLists.txt  Kamus.cpp  Kamus.h  Model.cpp  Model.h  main.cpp
operasi/: PenambahKata.cpp  PenambahKata.h  PenampilStruktur.cpp  PenampilStruktur.h  PenerjemahKalimat.cpp  PenerjemahKalimat.h
stemmer/: Stemmer.cpp  Stemmer.h
